# campaign_manage

./: .env  Cargo.toml
data/: campaign_manage.sql
src/: main.rs
src/models/: campaign_details.rs  mod.rs  mur_company.rs  mur_menu.rs
