[package]
name = "campaign_manage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
anyhow = "1"
dotenv = "0.15"
env_logger = "0.9"
tower = "0.4.10"

[dependencies.sea-orm]
version = "^0.4.0"
features = ["macros", "runtime-tokio-native-tls"]
default-features = false

[features]
default = ["sqlx-mysql"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]